Added the figure for the Matlab GUI

--- a/CegepActivity/text/ICP.tex
+++ b/CegepActivity/text/ICP.tex
@@ -51,3 +51,11 @@
     	\centering
     	\movie[showcontrols]{\includegraphics[width=\textwidth]{./media/vid.png}}{./media/icp_pomerleau.mp4}
     \end{frame}
+    
+    \begin{frame}
+        \frametitle{À l'action}
+            \begin{figure}                 
+                \includegraphics[width=0.8\textwidth]{./media/labo.png}
+                \caption{Interface graphique dans Matlab}
+            \end{figure}
+    \end{frame}
